config/pod-liveness-exec.yaml

# To perform a probe, the kubelet executes the command cat /tmp/healthy in
# the target container. If the command succeeds, it returns 0, and the kubelet
# considers the container to be alive and healthy. If the command returns a
# non-zero value, the kubelet kills the container and restarts it.
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: registry.k8s.io/busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -f /tmp/healthy; sleep 600
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
