config/pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["/bin/bash", "-c"]
    args:
      - while true; do echo 'alive'; sleep 10; done
