config/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: lb.local
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port: 
              number: 8080
        # path: /my-app 
        path: /
        pathType: Exact
